Adding everything incase it goes wrong

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,7 +11,7 @@
       <mat-icon>cached</mat-icon>Load
     </button>
     <button mat-button (click)="openHelpPage()">
-      <mat-icon>help_outline</mat-icon>Help
+      <mat-icon>question_mark</mat-icon>Help
     </button>
     <button mat-button (click)="signOut()">
       <mat-icon>logout</mat-icon>Log Out
