--- a/src/app/scoresheet/info/info.component.html
+++ b/src/app/scoresheet/info/info.component.html
@@ -1,6 +1,6 @@
-<mat-card class="info-card h100">
+<mat-card class="info-card">
   <mat-card-content>
-    <mat-form-field class="info-field">
+    <mat-form-field class="input-field">
       <mat-label>Game Number</mat-label>
       <input
         matInput
@@ -9,7 +9,7 @@
       />
     </mat-form-field>
 
-    <mat-form-field class="info-field">
+    <mat-form-field class="input-field">
       <mat-label>Location</mat-label>
       <input
         matInput
@@ -18,7 +18,7 @@
       />
     </mat-form-field>
 
-    <mat-form-field class="info-field">
+    <mat-form-field class="input-field">
       <mat-label>League</mat-label>
       <input
         matInput
@@ -27,7 +27,7 @@
       />
     </mat-form-field>
 
-    <mat-form-field class="info-field">
+    <mat-form-field class="input-field">
       <mat-label>Category</mat-label>
       <input
         matInput
@@ -36,7 +36,7 @@
       />
     </mat-form-field>
 
-    <mat-form-field class="info-field" (click)="picker.open()">
+    <mat-form-field class="input-field" (click)="picker.open()">
       <mat-label>Date</mat-label>
       <input
         matInput
@@ -48,7 +48,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <mat-form-field class="info-field">
+    <mat-form-field class="input-field">
       <mat-label>Time</mat-label>
       <input
         matInput
