--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,27 +1,31 @@
 <mat-toolbar style="background-color: #b2beb5">
-  Wolo Game Sheet
-  <span style="flex: 1 1 auto"></span>
+    Wolo Game Sheet
+    <span style="flex: 1 1 auto"></span>
 
-  <div *ngIf="session; else nosession">
-    <button mat-button (click)="newGame()"><mat-icon>add</mat-icon>New</button>
-    <button mat-button (click)="saveGame()">
-      <mat-icon>backup</mat-icon>Save
-    </button>
-    <button mat-button (click)="loadGame()">
-      <mat-icon>cached</mat-icon>Load
-    </button>
-    <button mat-button (click)="openHelpPage()">
-      <mat-icon>question_mark</mat-icon>Help
-    </button>
-    <button mat-button (click)="signOut()">
-      <mat-icon>logout</mat-icon>Log Out
-    </button>
-  </div>
+    <div *ngIf="session; else nosession">
+        <button mat-button (click)="saveGame()" *ngIf="!($gameSaved | async)">
+            <mat-icon>save</mat-icon>Save Game
+        </button>
+        <button mat-button (click)="newGame()">
+            <mat-icon>add</mat-icon>New Game
+        </button>
+        <button mat-button (click)="loadGame()">
+            <mat-icon>cached</mat-icon>Load Game
+        </button>
+        <button mat-button (click)="openHelpPage()">
+            <mat-icon>question_mark</mat-icon>Help
+        </button>
+        <button mat-button (click)="signOut()">
+            <mat-icon>logout</mat-icon>Log Out
+        </button>
+    </div>
 
-  <ng-template #nosession>
-    <button mat-button><mat-icon>help_outline</mat-icon>Help</button>
-    <button mat-button (click)="signIn()">
-      <mat-icon>login</mat-icon>Log In
-    </button>
-  </ng-template>
+    <ng-template #nosession>
+        <button mat-button (click)="openHelpPage()">
+            <mat-icon>question_mark</mat-icon>Help
+        </button>
+        <button mat-button (click)="signIn()">
+            <mat-icon>login</mat-icon>Log In
+        </button>
+    </ng-template>
 </mat-toolbar>
