--- a/src/app/scoresheet/scoresheet.component.css
+++ b/src/app/scoresheet/scoresheet.component.css
@@ -1,36 +1,48 @@
 .layout-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 175px 1fr;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "info command events"
-    "teams teams events";
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 175px 1fr;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "info command events"
+        "teams teams events";
 }
 
 @media screen and (max-width: 1300px) {
-  .layout-container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 175px 175px 442px;
-    grid-template-areas:
-      "info events"
-      "command events"
-      "teams teams";
-  }
+    .layout-container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 175px 175px 650px;
+        grid-template-areas:
+            "info events"
+            "command events"
+            "teams teams";
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .layout-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 175px 175px 175px 650px;
+        grid-template-areas:
+            "info"
+            "command"
+            "events"
+            "teams";
+    }
 }
 
 .events {
-  grid-area: events;
+    grid-area: events;
 }
 
 .command {
-  grid-area: command;
+    grid-area: command;
 }
 
 .teams {
-  grid-area: teams;
+    grid-area: teams;
 }
 
 .info {
-  grid-area: info;
+    grid-area: info;
 }
