--- a/src/app/scoresheet/help/help.component.html
+++ b/src/app/scoresheet/help/help.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Wolo Gamesheet Help & Information</h2>
 <mat-dialog-content>
     <p>
-        <a style="font-weight: bold">Goals:</a><br />
+        <a class="bold">Goals:</a><br />
         Input is: player number, team color, goal and time.<br />
         Player number options: 1 to 20<br />
         Team color options: l, light, w, white, h, home, d, dark, b, blue, a,
@@ -10,12 +10,12 @@
         Examples: 6bg100, 4whiteg10, 10darkgoal700, 14lgoal123
     </p>
     <p>
-        <a style="font-weight: bold">Next Quarter:</a><br />
+        <a class="bold">Next Quarter:</a><br />
         Input is: x (it can be repeated)<br />
         Examples: x, Xx, XXXXXX
     </p>
     <p>
-        <a style="font-weight: bold">Timeouts:</a><br />
+        <a class="bold">Timeouts:</a><br />
         Input is: timeout, team color and time. <br />
         Timeout options: t, to, timeout, time <br />
         Team color options: l, light, w, white, h, home, d, dark, b, blue, a,
@@ -23,16 +23,16 @@
         Examples: tb100, timeoutwhite123, todark700, timew111
     </p>
     <p>
-        <a style="font-weight: bold">Cards:</a><br />
+        <a class="bold">Cards:</a><br />
         Input is: person, team color, type of card and time. <br />
-        Person options: 1-20, hc, ac1, ac2 <br />
+        Person options: 1-20, coach, hc, assistant1, ac1, assistant2, ac2 <br />
         Team color options: l, light, w, white, h, home, d, dark, b, blue, a,
         away<br />
         Type of card options: r, red, y, yellow.<br />
         Examples: 6lightred100, acdarkred111, aabluey606, hcwhitered111
     </p>
     <p>
-        <a style="font-weight: bold">Cap Swap:</a><br />
+        <a class="bold">Cap Swap:</a><br />
         Input is: player1, swap, player2, team color and time.<br />
         Player options: 1-20<br />
         Swap options: s, swap<br />
@@ -41,7 +41,7 @@
         Examples: 6swap9b100, 2s10blue111
     </p>
     <p>
-        <a style="font-weight: bold">Exclusion:</a><br />
+        <a class="bold">Exclusion:</a><br />
         Input is: player, team color, exclusion and time.<br />
         Player options: 1-20<br />
         Team color options: l, light, w, white, h, home, d, dark, b, blue, a,
@@ -50,7 +50,7 @@
         Examples: 15blueexclusion111, 6lightkickout120, 12be600
     </p>
     <p>
-        <a style="font-weight: bold">Brutality:</a><br />
+        <a class="bold">Brutality:</a><br />
         Input is: player, team color, brutality and time.<br />
         Player options: 1-20<br />
         Team color options: l, light, w, white, h, home, d, dark, b, blue, a,
