--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,30 +2,73 @@
     Wolo Game Sheet
     <span style="flex: 1 1 auto"></span>
 
-    <div *ngIf="session; else nosession">
-        <button mat-button (click)="saveGame()" *ngIf="!($gameSaved | async)">
-            <mat-icon>save</mat-icon>Save Game
-        </button>
-        <button mat-button (click)="newGame()">
-            <mat-icon>add</mat-icon>New Game
-        </button>
-        <button mat-button (click)="loadGame()">
-            <mat-icon>cached</mat-icon>Load Game
-        </button>
-        <button mat-button (click)="openHelpPage()">
-            <mat-icon>question_mark</mat-icon>Help
-        </button>
-        <button mat-button (click)="signOut()">
-            <mat-icon>logout</mat-icon>Log Out
-        </button>
-    </div>
+    <div class="buttons-container">
+        <div *ngIf="session; else nosession">
+            <button
+                mat-button
+                (click)="saveGame()"
+                *ngIf="!($gameSaved | async)"
+            >
+                <mat-icon>save</mat-icon>Save Game
+            </button>
+            <button mat-button (click)="newGame()">
+                <mat-icon>add</mat-icon>New Game
+            </button>
+            <button mat-button (click)="loadGame()">
+                <mat-icon>cached</mat-icon>Load Game
+            </button>
+            <button mat-button (click)="openHelpPage()">
+                <mat-icon>question_mark</mat-icon>Help
+            </button>
+            <button mat-button (click)="signOut()">
+                <mat-icon>logout</mat-icon>Log Out
+            </button>
+        </div>
 
-    <ng-template #nosession>
-        <button mat-button (click)="openHelpPage()">
-            <mat-icon>question_mark</mat-icon>Help
+        <ng-template #nosession>
+            <button mat-button (click)="openHelpPage()">
+                <mat-icon>question_mark</mat-icon>Help
+            </button>
+            <button mat-button (click)="signIn()">
+                <mat-icon>login</mat-icon>Log In
+            </button>
+        </ng-template>
+    </div>
+    <div class="menu-button">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
         </button>
-        <button mat-button (click)="signIn()">
-            <mat-icon>login</mat-icon>Log In
-        </button>
-    </ng-template>
+        <mat-menu #menu="matMenu">
+            <div *ngIf="session; else nosession">
+                <button
+                    mat-menu-item
+                    (click)="saveGame()"
+                    *ngIf="!($gameSaved | async)"
+                >
+                    <mat-icon>save</mat-icon>Save Game
+                </button>
+                <button mat-menu-item (click)="newGame()">
+                    <mat-icon>add</mat-icon>New Game
+                </button>
+                <button mat-menu-item (click)="loadGame()">
+                    <mat-icon>cached</mat-icon>Load Game
+                </button>
+                <button mat-menu-item (click)="openHelpPage()">
+                    <mat-icon>question_mark</mat-icon>Help
+                </button>
+                <button mat-menu-item (click)="signOut()">
+                    <mat-icon>logout</mat-icon>Log Out
+                </button>
+            </div>
+
+            <ng-template #nosession>
+                <button mat-menu-item (click)="openHelpPage()">
+                    <mat-icon>question_mark</mat-icon>Help
+                </button>
+                <button mat-menu-item (click)="signIn()">
+                    <mat-icon>login</mat-icon>Log In
+                </button>
+            </ng-template>
+        </mat-menu>
+    </div>
 </mat-toolbar>
