--- a/src/app/scoresheet/events/events.component.html
+++ b/src/app/scoresheet/events/events.component.html
@@ -4,5 +4,6 @@
     [rowData]="events"
     [gridOptions]="gridOptions"
     [columnDefs]="colDefs"
+    overlayNoRowsTemplate=""
 >
 </ag-grid-angular>
