--- a/src/app/scoresheet/team-select/team-select.component.html
+++ b/src/app/scoresheet/team-select/team-select.component.html
@@ -1,13 +1,20 @@
-<mat-card *ngFor="let item of data.options" (click)="selectTeam(item)">
-    <mat-card-header>
-        <mat-card-title>Team name: {{ item.teamName }} </mat-card-title>
-        <mat-card-subtitle
-            >Last Updated:
-            {{ item.lastUpdated | date : "medium" }}</mat-card-subtitle
-        >
-    </mat-card-header>
-    <mat-card-content>
-        Coach:
-        {{ item.coach }}
-    </mat-card-content>
-</mat-card>
+<h2 mat-dialog-title>Wolo Gamesheet Team Selector</h2>
+<mat-dialog-content>
+    <mat-card
+        style="background-color: #e8ecf1"
+        *ngFor="let item of data.options"
+        (click)="selectTeam(item)"
+    >
+        <mat-card-header>
+            <mat-card-title>Team name: {{ item.teamName }} </mat-card-title>
+            <mat-card-subtitle
+                >Last Updated:
+                {{ item.lastUpdated | date : "medium" }}</mat-card-subtitle
+            >
+        </mat-card-header>
+        <mat-card-content>
+            Coach:
+            {{ item.coach }}
+        </mat-card-content>
+    </mat-card>
+</mat-dialog-content>
